# Noteor

./: .gitignore  CONTEXT.md  README.md  config.py  database.py  install.sh  main.py  pyproject.toml  requirements.txt
core/: audio_recorder.py  file_manager.py  webcam_recorder.py
packaging/: build_deb.sh  gen_icon.py  noteor.desktop
packaging/DEBIAN/: control  postinst
ui/: editor.py  help_window.py  main_window.py  styles.py  widgets.py
web/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/scripts/: generate-icons.mjs
web/src/: App.tsx  index.css
web/src/components/: AudioRecorder.tsx  BulkActionBar.tsx  CalendarView.tsx  GraphView.tsx  HelpModal.tsx  NoteEditor.tsx  NoteList.tsx  Settings.tsx  Sidebar.tsx  TagChip.tsx
web/src/db/: index.ts
web/src/services/: openrouter.ts
web/src/types/: index.ts
