[build-system]
# Installation : pip install setuptools wheel build
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "noteor"
version = "1.0.0"
description = "Gestionnaire de notes local avec support audio, images et vidéo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Noteor Project", email = "contact@github.com" },
]
keywords = ["notes", "markdown", "audio", "screenshot", "sqlite", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]

# Dépendances minimales obligatoires
dependencies = [
    "PyQt6>=6.4.0",
    "Markdown>=3.4.0",
]

[project.optional-dependencies]
# Images et miniatures (recommandé)
images = [
    "Pillow>=9.0.0",
]
# Audio via sounddevice (fallback si arecord absent)
audio = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
]
# Toutes les dépendances optionnelles
full = [
    "Pillow>=9.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
]
# Développement
dev = [
    "Pillow>=9.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.21.0",
    "pyinstaller>=6.0",
]

[project.urls]
Homepage      = "https://github.com/nouhailler/Noteor"
Repository    = "https://github.com/nouhailler/Noteor"
"Bug Tracker" = "https://github.com/nouhailler/Noteor/issues"
Releases      = "https://github.com/nouhailler/Noteor/releases"

# Commande `noteor` installée dans le PATH
[project.scripts]
noteor = "main:main"

# ─────────────────────────────────────────────────────────────────────────────
[tool.setuptools]
# Modules Python à la racine
py-modules = ["main", "config", "database"]

[tool.setuptools.packages.find]
# Sous-packages : core/ et ui/
where     = ["."]
include   = ["core*", "ui*"]
exclude   = ["packaging*", "__pycache__*", "*.egg-info*"]

[tool.setuptools.package-data]
# Pas de données statiques embarquées (icônes, styles dans le code)
"*" = []

# ─────────────────────────────────────────────────────────────────────────────
# Configuration des outils
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
